# LinqLikeForRust

./: .gitignore  Cargo.toml  README.md  adaptors.rs  grouping.rs  lib.rs  linq_tests.rs  lookup.rs  ordered.rs  queryable.rs
