[package]
name = "linq_rs"
version = "0.1.0"
edition = "2021"
description = "A LINQ-like query library for Rust iterators — no external dependencies"
license = "MIT"
keywords = ["linq", "iterator", "query", "collection"]

[lib]
name = "linq_rs"
path = "lib.rs"

[dev-dependencies]
# none — zero dependencies
